--- a/package.json
+++ b/package.json
@@ -213,10 +213,12 @@
   },
   "dependencies": {
     "babel-polyfill": "6.23.0",
+    "bootstrap": "^4.1.1",
     "chalk": "^1.1.3",
     "compression": "1.6.2",
     "cross-env": "5.0.0",
     "express": "4.15.3",
+    "firebase": "^5.2.0",
     "fontfaceobserver": "2.0.9",
     "history": "4.6.3",
     "hoist-non-react-statics": "2.1.1",
@@ -227,8 +229,10 @@
     "lodash": "4.17.4",
     "minimist": "1.2.0",
     "prop-types": "15.5.10",
+    "rc-pagination": "^1.16.4",
     "react": "15.6.1",
     "react-dom": "15.6.1",
+    "react-dropzone": "^4.2.11",
     "react-helmet": "5.1.3",
     "react-intl": "2.3.0",
     "react-loadable": "4.0.3",
@@ -236,6 +240,9 @@
     "react-redux-firebase": "^2.1.5",
     "react-router-dom": "4.1.1",
     "react-router-redux": "5.0.0-alpha.6",
+    "react-strap": "^0.0.1",
+    "react-tabs-redux": "^3.0.2",
+    "reactstrap": "^6.2.0",
     "redux": "3.6.0",
     "redux-immutable": "4.0.0",
     "redux-saga": "0.15.3",
