--- a/package.json
+++ b/package.json
@@ -226,24 +226,26 @@
     "intl": "1.2.5",
     "invariant": "2.2.2",
     "ip": "1.1.5",
+    "js-file-download": "^0.4.1",
     "lodash": "4.17.4",
     "minimist": "1.2.0",
     "prop-types": "15.5.10",
     "rc-pagination": "^1.16.4",
     "react": "15.6.1",
+    "react-cookie": "^2.2.0",
     "react-dom": "15.6.1",
     "react-dropzone": "^4.2.11",
     "react-helmet": "5.1.3",
     "react-intl": "2.3.0",
     "react-loadable": "4.0.3",
     "react-redux": "5.0.5",
-    "react-redux-firebase": "^2.1.5",
     "react-router-dom": "4.1.1",
     "react-router-redux": "5.0.0-alpha.6",
     "react-strap": "^0.0.1",
     "react-tabs-redux": "^3.0.2",
     "reactstrap": "^6.2.0",
     "redux": "3.6.0",
+    "redux-firestore": "^0.5.7",
     "redux-immutable": "4.0.0",
     "redux-saga": "0.15.3",
     "reselect": "3.0.1",
