--- a/package.json
+++ b/package.json
@@ -231,9 +231,9 @@
     "minimist": "1.2.0",
     "prop-types": "15.5.10",
     "rc-pagination": "^1.16.4",
-    "react": "15.6.1",
+    "react": "^16.4.1",
     "react-cookie": "^2.2.0",
-    "react-dom": "15.6.1",
+    "react-dom": "^16.4.1",
     "react-dropzone": "^4.2.11",
     "react-helmet": "5.1.3",
     "react-intl": "2.3.0",
@@ -241,9 +241,9 @@
     "react-redux": "5.0.5",
     "react-router-dom": "4.1.1",
     "react-router-redux": "5.0.0-alpha.6",
-    "react-strap": "^0.0.1",
+    "react-simple-popover": "^0.2.4",
     "react-tabs-redux": "^3.0.2",
-    "reactstrap": "^6.2.0",
+    "reactstrap": "^6.3.0",
     "redux": "3.6.0",
     "redux-firestore": "^0.5.7",
     "redux-immutable": "4.0.0",
