--- a/package.json
+++ b/package.json
@@ -235,10 +235,12 @@
     "react-cookie": "^2.2.0",
     "react-dom": "^16.4.1",
     "react-dropzone": "^4.2.11",
+    "react-favicon": "^0.0.14",
     "react-helmet": "5.1.3",
     "react-intl": "2.3.0",
     "react-loadable": "4.0.3",
     "react-redux": "5.0.5",
+    "react-responsive-modal": "^3.2.0",
     "react-router-dom": "4.1.1",
     "react-router-redux": "5.0.0-alpha.6",
     "react-simple-popover": "^0.2.4",
