--- a/package.json
+++ b/package.json
@@ -244,6 +244,7 @@
     "react-router-dom": "4.1.1",
     "react-router-redux": "5.0.0-alpha.6",
     "react-simple-popover": "^0.2.4",
+    "react-stripe-elements": "^2.0.1",
     "react-tabs-redux": "^3.0.2",
     "reactstrap": "^6.3.0",
     "redux": "3.6.0",
